--- a/net-core-example/Views/Home/Index.cshtml
+++ b/net-core-example/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>You can find the content for this site here <a href="https://github.com/MuyiComms/CI-9_Testing/actions">building Web apps with ASP.NET Core</a>.</p>
 </div>
